Fixes:    Show Running tasks page. Task:     <task number> AutoTest: <change number> Details:  Allows multitasking. Not a particularly fast-to-user                    user-interface, but discoverable.
[git-p4: depot-paths = "//depot/qt/main/": change = 202424]

--- a/tools/qvfb/SmartPhoneWithButtons.skin/defaultbuttons.conf
+++ b/tools/qvfb/SmartPhoneWithButtons.skin/defaultbuttons.conf
@@ -38,7 +38,7 @@ Default=5
 7=Settings/Beaming.desktop
 8=Applications/simapp.desktop,Applications/calculator.desktop
 9=Settings
-*=Applications/voicerecorder.desktop
+*=Running
 0=Applications/todolist.desktop
 #=Documents
 [SoftKeys]
