Fixes:    TaskManager does multitasking (happens to be qpe) Task:     <task number> AutoTest: <change number> Details:
[git-p4: depot-paths = "//depot/qt/main/": change = 202623]

--- a/tools/qvfb/SmartPhoneWithButtons.skin/defaultbuttons.conf
+++ b/tools/qvfb/SmartPhoneWithButtons.skin/defaultbuttons.conf
@@ -20,10 +20,10 @@ HeldActionMessage=newTask()
 [Button2]
 Name[]=Home Button
 Key=F1
-PressedActionService=qpe
+PressedActionService=TaskManager
 PressedActionMessage=multitask()
-HeldActionService=buttoneditor
-HeldActionMessage=raise()
+HeldActionService=TaskManager
+HeldActionMessage=showRunningTasks()
 [Menu]
 Rows=4
 Columns=3
