--- a/tools/qvfb/SmartPhoneWithButtons.skin/defaultbuttons.conf
+++ b/tools/qvfb/SmartPhoneWithButtons.skin/defaultbuttons.conf
@@ -38,7 +38,7 @@ Default=5
 7=Settings/Beaming.desktop
 8=Applications/simapp.desktop,Applications/calculator.desktop
 9=Settings
-*=Running
+*=Applications/voicerecorder.desktop
 0=Applications/todolist.desktop
 #=Documents
 [SoftKeys]
