--- a/tools/qvfb/SmartPhoneWithButtons.skin/defaultbuttons.conf
+++ b/tools/qvfb/SmartPhoneWithButtons.skin/defaultbuttons.conf
@@ -5,21 +5,22 @@ Context=Buttons
 Count=3
 [Button0]
 Name[]=Calendar Button
-Key=F2
+Key=F1
 PressedActionService=Calendar
 PressedActionMessage=raiseToday()
 HeldActionService=Calendar
 HeldActionMessage=newEvent()
 [Button1]
 Name[]=Tasks Button
-Key=F3
+Key=F2
 PressedActionService=Tasks
 PressedActionMessage=raise()
 HeldActionService=Tasks
 HeldActionMessage=newTask()
 [Button2]
 Name[]=Home Button
-Key=F1
+Key=HomePage
+PressedActionMapable=false
 PressedActionService=TaskManager
 PressedActionMessage=multitask()
 HeldActionService=TaskManager
