Fixes:    "HomePage" is unparseable (bug) Task:     <task number> AutoTest: <change number> Details:
[git-p4: depot-paths = "//depot/qt/main/": change = 202927]

--- a/tools/qvfb/SmartPhoneWithButtons.skin/defaultbuttons.conf
+++ b/tools/qvfb/SmartPhoneWithButtons.skin/defaultbuttons.conf
@@ -19,7 +19,7 @@ HeldActionService=Tasks
 HeldActionMessage=newTask()
 [Button2]
 Name[]=Home Button
-Key=HomePage
+Key=Home
 PressedActionMapable=false
 PressedActionService=TaskManager
 PressedActionMessage=multitask()
