Fixes:    Multitasking not user-configurable. Task:     <task number> AutoTest: <change number> Details:
[git-p4: depot-paths = "//depot/qt/main/": change = 203414]

--- a/tools/qvfb/SmartPhoneWithButtons.skin/defaultbuttons.conf
+++ b/tools/qvfb/SmartPhoneWithButtons.skin/defaultbuttons.conf
@@ -20,9 +20,10 @@ HeldActionMessage=newTask()
 [Button2]
 Name[]=Home Button
 Key=Home
-PressedActionMapable=false
+PressedActionMappable=0
 PressedActionService=TaskManager
 PressedActionMessage=multitask()
+HeldActionMappable=0
 HeldActionService=TaskManager
 HeldActionMessage=showRunningTasks()
 [Menu]
