p4i integration Integrate 205945 from 4.1 to main: Fixes: Task: RevBy: AutoTest: Details: Fixed bug in template for cellon mkspec file
[git-p4: depot-paths = "//depot/qt/main/": change = 206407]

--- a/mkspecs/qws/linux-cellon-g++/qmake.conf
+++ b/mkspecs/qws/linux-cellon-g++/qmake.conf
@@ -1,12 +1,12 @@
 #
-# $Id$
-#
 # qmake configuration for linux-g++ using the arm-linux-g++ crosscompiler
 #
 
 MAKEFILE_GENERATOR	= UNIX
 TEMPLATE		= app
-CONFIG			+= qt link_prl
+CONFIG			+= qt warn_on release link_prl
+QT                      += core gui network
+QMAKE_INCREMENTAL_STYLE = sublib
 
 QMAKE_CC		= arm-linux-gcc
 QMAKE_LEX		= flex
@@ -16,14 +16,14 @@ QMAKE_YACCFLAGS		= -d
 QMAKE_CFLAGS		= -pipe
 QMAKE_CFLAGS_WARN_ON	= -Wall -W
 QMAKE_CFLAGS_WARN_OFF	=
-QMAKE_CFLAGS_RELEASE	= -O2 -mtune=xscale -fomit-frame-pointer -finline-functions -funroll-loops -falign-functions=2 -falign-loops=2 -falign-jumps=2
-QMAKE_CFLAGS_DEBUG	= -pg
-QMAKE_CFLAGS_SHLIB	= -fPIC
+QMAKE_CFLAGS_RELEASE	= -Os
+QMAKE_CFLAGS_DEBUG	= -g
+QMAKE_CFLAGS_SHLIB	= 
 QMAKE_CFLAGS_YACC	= -Wno-unused -Wno-parentheses
 QMAKE_CFLAGS_THREAD	= -D_REENTRANT
 
 QMAKE_CXX		= arm-linux-g++
-QMAKE_CXXFLAGS		= $$QMAKE_CFLAGS -DQWS -fno-exceptions -fno-rtti -mcpu=xscale -DQT_QWS_CELLON
+QMAKE_CXXFLAGS		= $$QMAKE_CFLAGS -DQT_QWS_CELLON -DQWS -fno-exceptions -fno-rtti
 QMAKE_CXXFLAGS_WARN_ON	= $$QMAKE_CFLAGS_WARN_ON
 QMAKE_CXXFLAGS_WARN_OFF	= $$QMAKE_CFLAGS_WARN_OFF
 QMAKE_CXXFLAGS_RELEASE	= $$QMAKE_CFLAGS_RELEASE
@@ -36,18 +36,18 @@ QMAKE_INCDIR		=
 QMAKE_LIBDIR		=
 QMAKE_INCDIR_X11	= 
 QMAKE_LIBDIR_X11	= 
-QMAKE_INCDIR_QT		= $(QTDIR)/include
-QMAKE_LIBDIR_QT		= $(QTDIR)/lib
+QMAKE_INCDIR_QT		= $$[QT_INSTALL_HEADERS]
+QMAKE_LIBDIR_QT		= $$[QT_INSTALL_LIBS]
 QMAKE_INCDIR_OPENGL	= /usr/X11R6/include
 QMAKE_LIBDIR_OPENGL	= /usr/X11R6/lib
 QMAKE_INCDIR_QTOPIA	= $(QPEDIR)/include
 QMAKE_LIBDIR_QTOPIA	= $(QPEDIR)/lib
 
-QMAKE_LINK		= arm-linux-gcc
-QMAKE_LINK_SHLIB	= arm-linux-gcc
+QMAKE_LINK		= arm-linux-g++
+QMAKE_LINK_SHLIB	= arm-linux-g++
 QMAKE_LFLAGS		=
 QMAKE_LFLAGS_RELEASE	=
-QMAKE_LFLAGS_DEBUG	= -pg
+QMAKE_LFLAGS_DEBUG	=
 QMAKE_LFLAGS_SHLIB      = -shared
 QMAKE_LFLAGS_PLUGIN     = $$QMAKE_LFLAGS_SHLIB
 QMAKE_LFLAGS_SONAME     = -Wl,-soname,
@@ -61,13 +61,13 @@ QMAKE_LIBS_X11SM	=
 QMAKE_LIBS_QT		= -lqte
 QMAKE_LIBS_QT_THREAD    = -lqte-mt
 QMAKE_LIBS_QT_OPENGL	= -lqgl
-QMAKE_LIBS_QTOPIA	= -lqtopia -lqpe
+QMAKE_LIBS_QTOPIA	= -lqpe -lqtopia
 QMAKE_LIBS_THREAD       = -lpthread
 
-QMAKE_MOC		= $(QTDIR)/bin/moc
-QMAKE_UIC		= $(QTDIR)/bin/uic
+QMAKE_MOC		= $$[QT_INSTALL_BINS]/moc
+QMAKE_UIC		= $$[QT_INSTALL_BINS]/uic
 
-QMAKE_AR		= ar cqs
+QMAKE_AR		= arm-linux-ar cqs
 QMAKE_RANLIB		=
 
 QMAKE_TAR		= tar -cf
@@ -77,11 +77,6 @@ QMAKE_COPY		= cp -f
 QMAKE_MOVE		= mv -f
 QMAKE_DEL_FILE		= rm -f
 QMAKE_DEL_DIR		= rmdir
-QMAKE_STRIP             = arm-linux-strip
-QMAKE_STRIPFLAGS_LIB	= --strip-unneeded -R .note -R .comment
 QMAKE_CHK_DIR_EXISTS	= test -d
 QMAKE_MKDIR		= mkdir -p
-
-QMAKE_ARCH              = xscale
-
-exists($$(QPEDIR)/src/config.pri):include($$(QPEDIR)/src/config.pri)
+load(qt_config)
