--- a/mkspecs/qws/linux-cellon-g++/qmake.conf
+++ b/mkspecs/qws/linux-cellon-g++/qmake.conf
@@ -52,7 +52,7 @@ QMAKE_LFLAGS_SHLIB      = -shared
 QMAKE_LFLAGS_PLUGIN     = $$QMAKE_LFLAGS_SHLIB
 QMAKE_LFLAGS_SONAME     = -Wl,-soname,
 QMAKE_LFLAGS_THREAD     =
-QMAKE_RPATH             = -Wl,-rpath,
+QMAKE_RPATH             = -Wl,-rpath-link,
 
 QMAKE_LIBS		= 
 QMAKE_LIBS_DYNLOAD      = -ldl
