--- a/util/scripts/mac-binary/install/examples/Info.plist
+++ b/util/scripts/mac-binary/install/examples/Info.plist
@@ -23,7 +23,7 @@
 	<key>IFPkgFlagFollowLinks</key>
 	<true/>
 	<key>IFPkgFlagInstallFat</key>
-	<false/>
+	<true/>
 	<key>IFPkgFlagIsRequired</key>
 	<false/>
 	<key>IFPkgFlagRelocatable</key>
