p4i integration Integrate 207838 from 4.1 to main: Fixes:    Fixes defaultbuttons.conf for the skin to match the                Format expected via Qtopia main branch (4.1) Task:     <task number> RevBy:    <name of reviewer> AutoTest: <change number> Details:  There was a change in how config files should write        strings containing non-latin1 characters. This brings that change        to qvfb.
[git-p4: depot-paths = "//depot/qt/main/": change = 207839]

--- a/tools/qvfb/SmartPhone.skin/defaultbuttons.conf
+++ b/tools/qvfb/SmartPhone.skin/defaultbuttons.conf
@@ -45,15 +45,15 @@ Hold9='9
 Hold*=symbol
 Hold#=mode
 Tap0=space
-Tap1=".,'?!-@:↵1
-Tap2="aäåæàáâbcç2
-Tap3="deèéêf3
-Tap4="ghiìíî4
-Tap5="jkl5
-Tap6="mnñoöøòó6
-Tap7="pqrsß7
-Tap8="tuüùúv8
-Tap9="wxyz9
+Tap1="\".,'?!-@:1"
+Tap2="\"aäåæàáâbcç2"
+Tap3="\"deèéêf3"
+Tap4="\"ghiìíî4"
+Tap5="\"jkl5"
+Tap6="\"mnñoöøòó6"
+Tap7="\"pqrsß7"
+Tap8="\"tuüùúv8"
+Tap9="\"wxyz9"
 Tap*=modify
 Tap#=shift
 [LocaleTextButtons]
@@ -70,7 +70,7 @@ Tap9[]='wxyz
 Buttons=*#
 Tap*='*+pw
 Hold*=+
-Tap#=#
+Tap#='#
 Hold#=mode
 [Device]
 PrimaryInput=Keypad
