p4i integration Integrate 210995 from 4.1 to main: Fixes:    add arm-linux-strip Task:     none RevBy:    trust me AutoTest: <change number> Details:
[git-p4: depot-paths = "//depot/qt/main/": change = 210996]

--- a/mkspecs/qws/linux-sharp-g++/qmake.conf
+++ b/mkspecs/qws/linux-sharp-g++/qmake.conf
@@ -47,7 +47,7 @@ QMAKE_LIBDIR_QTOPIA	= $(QPEDIR)/lib
 
 QMAKE_LINK		= arm-linux-g++
 QMAKE_LINK_SHLIB	= arm-linux-g++
-QMAKE_LFLAGS		=
+QMAKE_LFLAGS		= 
 QMAKE_LFLAGS_RELEASE	=
 QMAKE_LFLAGS_DEBUG	=
 QMAKE_LFLAGS_SHLIB      = -shared
@@ -69,7 +69,7 @@ QMAKE_LIBS_THREAD       = -lpthread
 QMAKE_MOC		= $$[QT_INSTALL_BINS]/moc
 QMAKE_UIC		= $$[QT_INSTALL_BINS]/uic
 
-QMAKE_AR		= ar cqs
+QMAKE_AR		=  arm-linux-ar cqs
 QMAKE_RANLIB		=
 
 QMAKE_TAR		= tar -cf
@@ -79,6 +79,7 @@ QMAKE_COPY		= cp -f
 QMAKE_MOVE		= mv -f
 QMAKE_DEL_FILE		= rm -f
 QMAKE_DEL_DIR		= rmdir
+QMAKE_STRIP             = arm-linux-strip
 QMAKE_CHK_DIR_EXISTS	= test -d
 QMAKE_MKDIR		= mkdir -p
 load(qt_config)
