p4i integration Integrate 211243 from 4.1 to main: Doc:      Qt/Embedded -> Qtopia Core
[git-p4: depot-paths = "//depot/qt/main/": change = 211244]

--- a/mkspecs/qws/freebsd-generic-g++/qmake.conf
+++ b/mkspecs/qws/freebsd-generic-g++/qmake.conf
@@ -1,5 +1,5 @@
 #
-# qmake configuration for freebsd-g++ with Qt/Embedded
+# qmake configuration for freebsd-g++ with Qtopia Core
 #
 
 MAKEFILE_GENERATOR	= UNIX
