--- a/mkspecs/qws/macx-generic-g++/qmake.conf
+++ b/mkspecs/qws/macx-generic-g++/qmake.conf
@@ -1,5 +1,5 @@
 #
-# qmake configuration for macx-g++ with Qt/Embedded
+# qmake configuration for macx-g++ with Qtopia Core
 #
 
 MAKEFILE_GENERATOR	= UNIX
