--- a/mkspecs/qws/solaris-generic-g++/qmake.conf
+++ b/mkspecs/qws/solaris-generic-g++/qmake.conf
@@ -1,5 +1,5 @@
 #
-# qmake configuration for solaris-g++ with Qt/Embedded
+# qmake configuration for solaris-g++ with Qtopia Core
 #
 
 MAKEFILE_GENERATOR	= UNIX
