--- a/mkspecs/qws/linux-generic-g++/qmake.conf
+++ b/mkspecs/qws/linux-generic-g++/qmake.conf
@@ -40,8 +40,8 @@ QMAKE_INCDIR_X11	=
 QMAKE_LIBDIR_X11	= 
 QMAKE_INCDIR_QT		= $$[QT_INSTALL_HEADERS]
 QMAKE_LIBDIR_QT		= $$[QT_INSTALL_LIBS]
-QMAKE_INCDIR_OPENGL	= /usr/X11R6/include
-QMAKE_LIBDIR_OPENGL	= /usr/X11R6/lib
+QMAKE_INCDIR_OPENGL	= 
+QMAKE_LIBDIR_OPENGL	= 
 QMAKE_INCDIR_QTOPIA	= $(QPEDIR)/include/
 QMAKE_LIBDIR_QTOPIA	= $(QPEDIR)/lib
 
