Fixes:    remove makeC++SharedLib since it's deprecated Task:     97953
[git-p4: depot-paths = "//depot/qt/main/": change = 216813]

--- a/mkspecs/aix-xlc-64/qmake.conf
+++ b/mkspecs/aix-xlc-64/qmake.conf
@@ -14,8 +14,6 @@ QMAKE_LEXFLAGS		=
 QMAKE_YACC		= yacc
 QMAKE_YACCFLAGS		= -d
 QMAKE_CFLAGS		= -qstrict -q64
-# -qwarn64 turns on too many bogus warnings and shadows real warnings
-#QMAKE_CFLAGS_WARN_ON	= -qwarn64
 QMAKE_CFLAGS_WARN_ON    =
 QMAKE_CFLAGS_WARN_OFF	=
 QMAKE_CFLAGS_RELEASE	= -O3
@@ -47,12 +45,10 @@ QMAKE_LIBDIR_OPENGL	=
 QMAKE_LINK		= xlC
 QMAKE_LINK_THREAD	= xlC_r
 QMAKE_LINK_SHLIB	= ld
-QMAKE_LINK_SHLIB_CMD    = makeC++SharedLib -p 0 -X 64 \
-                          -o $(TARGET) $(LFLAGS) $(OBJECTS) $(OBJMOC) $(LIBS)
 QMAKE_LFLAGS		= -q64
 QMAKE_LFLAGS_RELEASE	=
 QMAKE_LFLAGS_DEBUG	=
-QMAKE_LFLAGS_SHLIB	=
+QMAKE_LFLAGS_SHLIB	= -qmkshrobj
 QMAKE_LFLAGS_PLUGIN	= $$QMAKE_LFLAGS_SHLIB
 QMAKE_LFLAGS_SONAME	=
 QMAKE_LFLAGS_THREAD	= -L/usr/lib/threads
