--- a/mkspecs/aix-xlc/qmake.conf
+++ b/mkspecs/aix-xlc/qmake.conf
@@ -45,12 +45,10 @@ QMAKE_LIBDIR_OPENGL	=
 QMAKE_LINK		= xlC
 QMAKE_LINK_THREAD	= xlC_r
 QMAKE_LINK_SHLIB	= ld
-QMAKE_LINK_SHLIB_CMD    = makeC++SharedLib -p 0 \
-                          -o $(TARGET) $(LFLAGS) $(OBJECTS) $(OBJMOC) $(LIBS)
 QMAKE_LFLAGS		=
 QMAKE_LFLAGS_RELEASE	=
 QMAKE_LFLAGS_DEBUG	=
-QMAKE_LFLAGS_SHLIB	=
+QMAKE_LFLAGS_SHLIB	= -qmkshrobj
 QMAKE_LFLAGS_PLUGIN	= $$QMAKE_LFLAGS_SHLIB
 QMAKE_LFLAGS_SONAME	=
 QMAKE_LFLAGS_THREAD	= -L/usr/lib/threads
