p4i integration Integrate 217804 from 4.1-optimized to main: Integrate 217392 from 4.1 to 4.1-optimized: Fixes:    crash and updated keybuttons Task:     <task number> RevBy:    <name of reviewer> AutoTest: <change number> Details:
[git-p4: depot-paths = "//depot/qt/main/": change = 217805]

--- a/tools/qvfb/Trolltech-Keypad.skin/defaultbuttons.conf
+++ b/tools/qvfb/Trolltech-Keypad.skin/defaultbuttons.conf
@@ -78,14 +78,15 @@ Hold9='9
 Hold*=symbol
 Hold#=mode
 Tap0=space
+Tap0=space
 Tap1="\".,'?!-@:1"
-Tap2="\"aäåæàáâbcç2"
-Tap3="\"deèéêf3"
-Tap4="\"ghiìíî4"
+Tap2="\"a\xe4\xe5\xe6\xe0\xe1\xe2\x62\x63\xe7\x32"
+Tap3="\"de\xe8\xe9\xea\x66\x33"
+Tap4="\"ghi\xec\xed\xee\x34"
 Tap5="\"jkl5"
-Tap6="\"mnñoöøòó6"
-Tap7="\"pqrsß7"
-Tap8="\"tuüùúv8"
+Tap6="\"mn\xf1o\xf6\xf8\xf2\xf3\x36"
+Tap7="\"pqrs\xdf\x37"
+Tap8="\"tu\xfc\xf9\xfav8"
 Tap9="\"wxyz9"
 Tap*=modify
 Tap#=shift
