Fixes:    (Partially) Qt building where srcdir or builddir contains spaces Task:     None AutoTest: __compile_qt__ Details:  There were LOTS and LOTS of places where the variables weren't properly quoted. So I quoted them all. And then I found some more. And then I realised I had to refactor QMAKE_VARS completely because it was simply completely unusable for the task (it could not handle quotes inside quotes).
So: ./configure now has all but two(*) variables properly
quoted so as to be able to run the configure script on a
shadow build containing spaces. The config tests have been
updated as well.

qmake/Makefile.unix had to be refactored to allow for quoted
filenames (actually, backslash-escaped).

This does not break the current Qt build for me, but it still
is not enough. The remaining two places for quoting the
variables break a normal build.

[git-p4: depot-paths = "//depot/qt/main/": change = 218152]

--- a/qmake/Makefile.unix
+++ b/qmake/Makefile.unix
@@ -1,3 +1,10 @@
+SOURCE_PATH = @SOURCE_PATH@
+BUILD_PATH = @BUILD_PATH@
+QTOBJS = @QMAKE_QTOBJS@
+QTSRCS = @QMAKE_QTSRCS@
+QMAKESPEC = @QMAKESPEC@
+LFLAGS = @QMAKE_LFLAGS@
+
 #qmake code
 OBJS=project.o property.o main.o makefile.o unixmake2.o unixmake.o  \
      mingw_make.o option.o winmakefile.o projectgenerator.o \
@@ -10,165 +17,164 @@ QOBJS=qchar.o qstring.o qstringmatcher.o qtextstream.o qiodevice.o qglobal.o \
       qfsfileengine_unix.o qfsfileengine.o qregexp.o qvector.o qbitarray.o qdir.o quuid.o qhash.o \
       qfileinfo.o qdatetime.o qstringlist.o qabstractfileengine.o qtemporaryfile.o \
       qmap.o qunicodetables.o qmetatype.o qsettings.o qvariant.o qvsnprintf.o \
-      qlocale.o qlinkedlist.o qurl.o @QMAKE_QTOBJS@
+      qlocale.o qlinkedlist.o qurl.o $(QTOBJS)
 
 #all sources, used for the depend target
 DEPEND_SRC=project.cpp property.cpp meta.cpp main.cpp qtmd5.cpp generators/makefile.cpp generators/unix/unixmake2.cpp \
            generators/unix/unixmake.cpp generators/win32/winmakefile.cpp generators/projectgenerator.cpp \
 	   generators/mac/pbuilder_pbx.cpp generators/mac/xmloutput.cpp generators/metamakefile.cpp \
 	   generators/makefiledeps.cpp option.cpp generators/win32/mingw_make.cpp generators/makefile.cpp \
-	   @SOURCE_PATH@/src/corelib/tools/qchar.cpp @SOURCE_PATH@/src/corelib/tools/qstring.cpp \
-	   @SOURCE_PATH@/src/corelib/io/qfile.cpp @SOURCE_PATH@/src/corelib/tools/qstringmatcher.cpp \
-	   @SOURCE_PATH@/src/corelib/io/qtextstream.cpp @SOURCE_PATH@/src/corelib/io/qiodevice.cpp \
-	   @SOURCE_PATH@/src/corelib/global/qglobal.cpp @SOURCE_PATH@/src/corelib/tools/qregexp.cpp \
-	   @SOURCE_PATH@/src/corelib/tools/qbytearray.cpp @SOURCE_PATH@/src/corelib/tools/qbytearraymatcher.cpp \
-	   @SOURCE_PATH@/src/corelib/io/qdatastream.cpp @SOURCE_PATH@/src/corelib/io/qbuffer.cpp \
-	   @SOURCE_PATH@/src/corelib/io/qfsfileengine_unix.cpp @SOURCE_PATH@/src/corelib/io/qabstractfileengine.cpp \
-	   @SOURCE_PATH@/src/corelib/io/qfsfileengine.cpp @SOURCE_PATH@/src/corelib/tools/qlistdata.cpp \
-	   @SOURCE_PATH@/src/corelib/tools/qvector.cpp @SOURCE_PATH@/src/corelib/tools/qbitarray.cpp \
-	   @SOURCE_PATH@/src/corelib/io/qdir.cpp @SOURCE_PATH@/src/corelib/plugin/quuid.cpp \
-	   @SOURCE_PATH@/src/corelib/io/qfileinfo.cpp @SOURCE_PATH@/src/corelib/tools/qdatetime.cpp \
-	   @SOURCE_PATH@/src/corelib/tools/qstringlist.cpp @SOURCE_PATH@/src/corelib/tools/qmap.cpp \
-	   @SOURCE_PATH@/src/corelib/global/qconfig.cpp @SOURCE_PATH@/src/corelib/io/qurl.cpp \
-	   @SOURCE_PATH@/src/corelib/tools/qlocale.cpp @SOURCE_PATH@/src/corelib/tools/qlinkedlist.cpp \
-	   @SOURCE_PATH@/src/corelib/tools/qhash.cpp @SOURCE_PATH@/src/corelib/kernel/qcore_mac.cpp \
-	   @SOURCE_PATH@/src/corelib/io/qtemporaryfile.cpp @SOURCE_PATH@/src/corelib/kernel/qmetatype.cpp \
-	   @SOURCE_PATH@/src/corelib/tools/qvsnprintf.cpp @SOURCE_PATH@/src/corelib/tools/qunicodetables.cpp \
-	   @SOURCE_PATH@/src/corelib/io/qsettings.cpp @SOURCE_PATH@/src/corelib/kernel/qvariant.cpp \
-	   @QMAKE_QTSRCS@ $(COMMERCIAL_DEPEND_SRC)
+	   $(SOURCE_PATH)/src/corelib/tools/qchar.cpp $(SOURCE_PATH)/src/corelib/tools/qstring.cpp \
+	   $(SOURCE_PATH)/src/corelib/io/qfile.cpp $(SOURCE_PATH)/src/corelib/tools/qstringmatcher.cpp \
+	   $(SOURCE_PATH)/src/corelib/io/qtextstream.cpp $(SOURCE_PATH)/src/corelib/io/qiodevice.cpp \
+	   $(SOURCE_PATH)/src/corelib/global/qglobal.cpp $(SOURCE_PATH)/src/corelib/tools/qregexp.cpp \
+	   $(SOURCE_PATH)/src/corelib/tools/qbytearray.cpp $(SOURCE_PATH)/src/corelib/tools/qbytearraymatcher.cpp \
+	   $(SOURCE_PATH)/src/corelib/io/qdatastream.cpp $(SOURCE_PATH)/src/corelib/io/qbuffer.cpp \
+	   $(SOURCE_PATH)/src/corelib/io/qfsfileengine_unix.cpp $(SOURCE_PATH)/src/corelib/io/qabstractfileengine.cpp \
+	   $(SOURCE_PATH)/src/corelib/io/qfsfileengine.cpp $(SOURCE_PATH)/src/corelib/tools/qlistdata.cpp \
+	   $(SOURCE_PATH)/src/corelib/tools/qvector.cpp $(SOURCE_PATH)/src/corelib/tools/qbitarray.cpp \
+	   $(SOURCE_PATH)/src/corelib/io/qdir.cpp $(SOURCE_PATH)/src/corelib/plugin/quuid.cpp \
+	   $(SOURCE_PATH)/src/corelib/io/qfileinfo.cpp $(SOURCE_PATH)/src/corelib/tools/qdatetime.cpp \
+	   $(SOURCE_PATH)/src/corelib/tools/qstringlist.cpp $(SOURCE_PATH)/src/corelib/tools/qmap.cpp \
+	   $(SOURCE_PATH)/src/corelib/global/qconfig.cpp $(SOURCE_PATH)/src/corelib/io/qurl.cpp \
+	   $(SOURCE_PATH)/src/corelib/tools/qlocale.cpp $(SOURCE_PATH)/src/corelib/tools/qlinkedlist.cpp \
+	   $(SOURCE_PATH)/src/corelib/tools/qhash.cpp $(SOURCE_PATH)/src/corelib/kernel/qcore_mac.cpp \
+	   $(SOURCE_PATH)/src/corelib/io/qtemporaryfile.cpp $(SOURCE_PATH)/src/corelib/kernel/qmetatype.cpp \
+	   $(SOURCE_PATH)/src/corelib/tools/qvsnprintf.cpp $(SOURCE_PATH)/src/corelib/tools/qunicodetables.cpp \
+	   $(SOURCE_PATH)/src/corelib/io/qsettings.cpp $(SOURCE_PATH)/src/corelib/kernel/qvariant.cpp \
+	   $(QTSRCS) $(COMMERCIAL_DEPEND_SRC)
 
 CXXFLAGS = @QMAKE_CXXFLAGS@ \
 	   -I. -Igenerators -Igenerators/unix -Igenerators/win32 -Igenerators/mac \
-	   -I@SOURCE_PATH@/src/corelib/arch/generic -I@BUILD_PATH@/include -I@BUILD_PATH@/include/QtCore \
-	   -I@SOURCE_PATH@/include -I@SOURCE_PATH@/include/QtCore -I@BUILD_PATH@/src/corelib/global \
+	   -I$(SOURCE_PATH)/src/corelib/arch/generic -I$(BUILD_PATH)/include -I$(BUILD_PATH)/include/QtCore \
+	   -I$(SOURCE_PATH)/include -I$(SOURCE_PATH)/include/QtCore -I$(BUILD_PATH)/src/corelib/global \
 	   -DQT_NO_TEXTCODEC -DQT_NO_UNICODETABLES -DQT_NO_COMPONENT -DQT_NO_STL -DQT_BUILD_QMAKE \
-	   -DQT_NO_COMPRESS -I@QMAKESPEC@ -DHAVE_QCONFIG_CPP -DQT_NO_THREAD -DQT_NO_QOBJECT \
+	   -DQT_NO_COMPRESS -I$(QMAKESPEC) -DHAVE_QCONFIG_CPP -DQT_NO_THREAD -DQT_NO_QOBJECT \
            -DQT_NO_GEOM_VARIANT $(OPENSOURCE_CXXFLAGS)
-LFLAGS=@QMAKE_LFLAGS@
 
-first all: @BUILD_PATH@/bin/qmake
-qmake: @BUILD_PATH@/bin/qmake
+first all: $(BUILD_PATH)/bin/qmake
+qmake: $(BUILD_PATH)/bin/qmake
 
-@BUILD_PATH@/bin/qmake: $(OBJS) $(QOBJS)
-	$(CXX) -o $@ $(OBJS) $(QOBJS) $(LFLAGS)
+$(BUILD_PATH)/bin/qmake: $(OBJS) $(QOBJS)
+	$(CXX) -o "$@" $(OBJS) $(QOBJS) $(LFLAGS)
 
 clean::
 	rm -f $(OBJS) $(QOBJS)
 
 distclean:: clean
-	rm -rf @BUILD_PATH/bin/qmake .deps
+	rm -rf $(BUILD_PATH)/bin/qmake .deps
 
 depend:
 	makedepend -D__MAKEDEPEND__ $(DEPEND_SRC)
 
 # don't use optimization for these
-qtextstream.o: @SOURCE_PATH@/src/corelib/io/qtextstream.cpp
-	$(CXX) -c -o $@ $(CXXFLAGS) @SOURCE_PATH@/src/corelib/io/qtextstream.cpp
+qtextstream.o: $(SOURCE_PATH)/src/corelib/io/qtextstream.cpp
+	$(CXX) -c -o $@ $(CXXFLAGS) $(SOURCE_PATH)/src/corelib/io/qtextstream.cpp
 
-qvariant.o: @SOURCE_PATH@/src/corelib/kernel/qvariant.cpp
-	$(CXX) -c -o $@ $(CXXFLAGS) @SOURCE_PATH@/src/corelib/kernel/qvariant.cpp
+qvariant.o: $(SOURCE_PATH)/src/corelib/kernel/qvariant.cpp
+	$(CXX) -c -o $@ $(CXXFLAGS) $(SOURCE_PATH)/src/corelib/kernel/qvariant.cpp
 
-qsettings.o: @SOURCE_PATH@/src/corelib/io/qsettings.cpp
-	$(CXX) -c -o $@ $(CXXFLAGS) @SOURCE_PATH@/src/corelib/io/qsettings.cpp
+qsettings.o: $(SOURCE_PATH)/src/corelib/io/qsettings.cpp
+	$(CXX) -c -o $@ $(CXXFLAGS) $(SOURCE_PATH)/src/corelib/io/qsettings.cpp
 
-qsettings_mac.o: @SOURCE_PATH@/src/corelib/io/qsettings_mac.cpp
-	$(CXX) -c -o $@ $(CXXFLAGS) @SOURCE_PATH@/src/corelib/io/qsettings_mac.cpp
+qsettings_mac.o: $(SOURCE_PATH)/src/corelib/io/qsettings_mac.cpp
+	$(CXX) -c -o $@ $(CXXFLAGS) $(SOURCE_PATH)/src/corelib/io/qsettings_mac.cpp
 
-qiodevice.o: @SOURCE_PATH@/src/corelib/io/qiodevice.cpp
-	$(CXX) -c -o $@ $(CXXFLAGS) @SOURCE_PATH@/src/corelib/io/qiodevice.cpp
+qiodevice.o: $(SOURCE_PATH)/src/corelib/io/qiodevice.cpp
+	$(CXX) -c -o $@ $(CXXFLAGS) $(SOURCE_PATH)/src/corelib/io/qiodevice.cpp
 
-qglobal.o: @SOURCE_PATH@/src/corelib/global/qglobal.cpp
-	$(CXX) -c -o $@ $(CXXFLAGS) @SOURCE_PATH@/src/corelib/global/qglobal.cpp
+qglobal.o: $(SOURCE_PATH)/src/corelib/global/qglobal.cpp
+	$(CXX) -c -o $@ $(CXXFLAGS) $(SOURCE_PATH)/src/corelib/global/qglobal.cpp
 
-qbytearray.o: @SOURCE_PATH@/src/corelib/tools/qbytearray.cpp
-	$(CXX) -c -o $@ $(CXXFLAGS) @SOURCE_PATH@/src/corelib/tools/qbytearray.cpp
+qbytearray.o: $(SOURCE_PATH)/src/corelib/tools/qbytearray.cpp
+	$(CXX) -c -o $@ $(CXXFLAGS) $(SOURCE_PATH)/src/corelib/tools/qbytearray.cpp
 
-qvsnprintf.o: @SOURCE_PATH@/src/corelib/tools/qvsnprintf.cpp
-	$(CXX) -c -o $@ $(CXXFLAGS) @SOURCE_PATH@/src/corelib/tools/qvsnprintf.cpp
+qvsnprintf.o: $(SOURCE_PATH)/src/corelib/tools/qvsnprintf.cpp
+	$(CXX) -c -o $@ $(CXXFLAGS) $(SOURCE_PATH)/src/corelib/tools/qvsnprintf.cpp
 
-qbytearraymatcher.o: @SOURCE_PATH@/src/corelib/tools/qbytearraymatcher.cpp
-	$(CXX) -c -o $@ $(CXXFLAGS) @SOURCE_PATH@/src/corelib/tools/qbytearraymatcher.cpp
+qbytearraymatcher.o: $(SOURCE_PATH)/src/corelib/tools/qbytearraymatcher.cpp
+	$(CXX) -c -o $@ $(CXXFLAGS) $(SOURCE_PATH)/src/corelib/tools/qbytearraymatcher.cpp
 
-qmetatype.o: @SOURCE_PATH@/src/corelib/kernel/qmetatype.cpp
-	$(CXX) -c -o $@ $(CXXFLAGS) @SOURCE_PATH@/src/corelib/kernel/qmetatype.cpp
+qmetatype.o: $(SOURCE_PATH)/src/corelib/kernel/qmetatype.cpp
+	$(CXX) -c -o $@ $(CXXFLAGS) $(SOURCE_PATH)/src/corelib/kernel/qmetatype.cpp
 
-qcore_mac.o: @SOURCE_PATH@/src/corelib/kernel/qcore_mac.cpp
-	$(CXX) -c -o $@ $(CXXFLAGS) @SOURCE_PATH@/src/corelib/kernel/qcore_mac.cpp
+qcore_mac.o: $(SOURCE_PATH)/src/corelib/kernel/qcore_mac.cpp
+	$(CXX) -c -o $@ $(CXXFLAGS) $(SOURCE_PATH)/src/corelib/kernel/qcore_mac.cpp
 
-qurl.o: @SOURCE_PATH@/src/corelib/io/qurl.cpp
-	$(CXX) -c -o $@ $(CXXFLAGS) @SOURCE_PATH@/src/corelib/io/qurl.cpp
+qurl.o: $(SOURCE_PATH)/src/corelib/io/qurl.cpp
+	$(CXX) -c -o $@ $(CXXFLAGS) $(SOURCE_PATH)/src/corelib/io/qurl.cpp
 
-qchar.o: @SOURCE_PATH@/src/corelib/tools/qchar.cpp
-	$(CXX) -c -o $@ $(CXXFLAGS) @SOURCE_PATH@/src/corelib/tools/qchar.cpp
+qchar.o: $(SOURCE_PATH)/src/corelib/tools/qchar.cpp
+	$(CXX) -c -o $@ $(CXXFLAGS) $(SOURCE_PATH)/src/corelib/tools/qchar.cpp
 
-qstring.o: @SOURCE_PATH@/src/corelib/tools/qstring.cpp
-	$(CXX) -c -o $@ $(CXXFLAGS) @SOURCE_PATH@/src/corelib/tools/qstring.cpp
+qstring.o: $(SOURCE_PATH)/src/corelib/tools/qstring.cpp
+	$(CXX) -c -o $@ $(CXXFLAGS) $(SOURCE_PATH)/src/corelib/tools/qstring.cpp
 
-qstringmatcher.o: @SOURCE_PATH@/src/corelib/tools/qstringmatcher.cpp
-	$(CXX) -c -o $@ $(CXXFLAGS) @SOURCE_PATH@/src/corelib/tools/qstringmatcher.cpp
+qstringmatcher.o: $(SOURCE_PATH)/src/corelib/tools/qstringmatcher.cpp
+	$(CXX) -c -o $@ $(CXXFLAGS) $(SOURCE_PATH)/src/corelib/tools/qstringmatcher.cpp
 
-qlocale.o: @SOURCE_PATH@/src/corelib/tools/qlocale.cpp
-	$(CXX) -c -o $@ $(CXXFLAGS) @SOURCE_PATH@/src/corelib/tools/qlocale.cpp
+qlocale.o: $(SOURCE_PATH)/src/corelib/tools/qlocale.cpp
+	$(CXX) -c -o $@ $(CXXFLAGS) $(SOURCE_PATH)/src/corelib/tools/qlocale.cpp
 
-qdatastream.o: @SOURCE_PATH@/src/corelib/io/qdatastream.cpp
-	$(CXX) -c -o $@ $(CXXFLAGS) @SOURCE_PATH@/src/corelib/io/qdatastream.cpp
+qdatastream.o: $(SOURCE_PATH)/src/corelib/io/qdatastream.cpp
+	$(CXX) -c -o $@ $(CXXFLAGS) $(SOURCE_PATH)/src/corelib/io/qdatastream.cpp
 
-qunicodetables.o: @SOURCE_PATH@/src/corelib/tools/qunicodetables.cpp
-	$(CXX) -c -o $@ $(CXXFLAGS) @SOURCE_PATH@/src/corelib/tools/qunicodetables.cpp
+qunicodetables.o: $(SOURCE_PATH)/src/corelib/tools/qunicodetables.cpp
+	$(CXX) -c -o $@ $(CXXFLAGS) $(SOURCE_PATH)/src/corelib/tools/qunicodetables.cpp
 
-qbuffer.o: @SOURCE_PATH@/src/corelib/io/qbuffer.cpp
-	$(CXX) -c -o $@ $(CXXFLAGS) @SOURCE_PATH@/src/corelib/io/qbuffer.cpp
+qbuffer.o: $(SOURCE_PATH)/src/corelib/io/qbuffer.cpp
+	$(CXX) -c -o $@ $(CXXFLAGS) $(SOURCE_PATH)/src/corelib/io/qbuffer.cpp
 
-qlistdata.o: @SOURCE_PATH@/src/corelib/tools/qlistdata.cpp
-	$(CXX) -c -o $@ $(CXXFLAGS) @SOURCE_PATH@/src/corelib/tools/qlistdata.cpp
+qlistdata.o: $(SOURCE_PATH)/src/corelib/tools/qlistdata.cpp
+	$(CXX) -c -o $@ $(CXXFLAGS) $(SOURCE_PATH)/src/corelib/tools/qlistdata.cpp
 
-qfile.o: @SOURCE_PATH@/src/corelib/io/qfile.cpp
-	$(CXX) -c -o $@ $(CXXFLAGS) @SOURCE_PATH@/src/corelib/io/qfile.cpp
+qfile.o: $(SOURCE_PATH)/src/corelib/io/qfile.cpp
+	$(CXX) -c -o $@ $(CXXFLAGS) $(SOURCE_PATH)/src/corelib/io/qfile.cpp
 
-qfsfileengine.o: @SOURCE_PATH@/src/corelib/io/qfsfileengine.cpp
-	$(CXX) -c -o $@ $(CXXFLAGS) @SOURCE_PATH@/src/corelib/io/qfsfileengine.cpp
+qfsfileengine.o: $(SOURCE_PATH)/src/corelib/io/qfsfileengine.cpp
+	$(CXX) -c -o $@ $(CXXFLAGS) $(SOURCE_PATH)/src/corelib/io/qfsfileengine.cpp
 
-qfsfileengine_unix.o: @SOURCE_PATH@/src/corelib/io/qfsfileengine_unix.cpp
-	$(CXX) -c -o $@ $(CXXFLAGS) @SOURCE_PATH@/src/corelib/io/qfsfileengine_unix.cpp
+qfsfileengine_unix.o: $(SOURCE_PATH)/src/corelib/io/qfsfileengine_unix.cpp
+	$(CXX) -c -o $@ $(CXXFLAGS) $(SOURCE_PATH)/src/corelib/io/qfsfileengine_unix.cpp
 
-qabstractfileengine.o: @SOURCE_PATH@/src/corelib/io/qabstractfileengine.cpp
-	$(CXX) -c -o $@ $(CXXFLAGS) @SOURCE_PATH@/src/corelib/io/qabstractfileengine.cpp
+qabstractfileengine.o: $(SOURCE_PATH)/src/corelib/io/qabstractfileengine.cpp
+	$(CXX) -c -o $@ $(CXXFLAGS) $(SOURCE_PATH)/src/corelib/io/qabstractfileengine.cpp
 
-qtemporaryfile.o: @SOURCE_PATH@/src/corelib/io/qtemporaryfile.cpp
-	$(CXX) -c -o $@ $(CXXFLAGS) @SOURCE_PATH@/src/corelib/io/qtemporaryfile.cpp
+qtemporaryfile.o: $(SOURCE_PATH)/src/corelib/io/qtemporaryfile.cpp
+	$(CXX) -c -o $@ $(CXXFLAGS) $(SOURCE_PATH)/src/corelib/io/qtemporaryfile.cpp
 
-qregexp.o: @SOURCE_PATH@/src/corelib/tools/qregexp.cpp
-	$(CXX) -c -o $@ $(CXXFLAGS) @SOURCE_PATH@/src/corelib/tools/qregexp.cpp
+qregexp.o: $(SOURCE_PATH)/src/corelib/tools/qregexp.cpp
+	$(CXX) -c -o $@ $(CXXFLAGS) $(SOURCE_PATH)/src/corelib/tools/qregexp.cpp
 
-qvector.o: @SOURCE_PATH@/src/corelib/tools/qvector.cpp
-	$(CXX) -c -o $@ $(CXXFLAGS) @SOURCE_PATH@/src/corelib/tools/qvector.cpp
+qvector.o: $(SOURCE_PATH)/src/corelib/tools/qvector.cpp
+	$(CXX) -c -o $@ $(CXXFLAGS) $(SOURCE_PATH)/src/corelib/tools/qvector.cpp
 
-qbitarray.o: @SOURCE_PATH@/src/corelib/tools/qbitarray.cpp
-	$(CXX) -c -o $@ $(CXXFLAGS) @SOURCE_PATH@/src/corelib/tools/qbitarray.cpp
+qbitarray.o: $(SOURCE_PATH)/src/corelib/tools/qbitarray.cpp
+	$(CXX) -c -o $@ $(CXXFLAGS) $(SOURCE_PATH)/src/corelib/tools/qbitarray.cpp
 
-qdir.o: @SOURCE_PATH@/src/corelib/io/qdir.cpp
-	$(CXX) -c -o $@ $(CXXFLAGS) @SOURCE_PATH@/src/corelib/io/qdir.cpp
+qdir.o: $(SOURCE_PATH)/src/corelib/io/qdir.cpp
+	$(CXX) -c -o $@ $(CXXFLAGS) $(SOURCE_PATH)/src/corelib/io/qdir.cpp
 
-quuid.o: @SOURCE_PATH@/src/corelib/plugin/quuid.cpp
-	$(CXX) -c -o $@ $(CXXFLAGS) @SOURCE_PATH@/src/corelib/plugin/quuid.cpp
+quuid.o: $(SOURCE_PATH)/src/corelib/plugin/quuid.cpp
+	$(CXX) -c -o $@ $(CXXFLAGS) $(SOURCE_PATH)/src/corelib/plugin/quuid.cpp
 
-qfileinfo.o: @SOURCE_PATH@/src/corelib/io/qfileinfo.cpp
-	$(CXX) -c -o $@ $(CXXFLAGS) @SOURCE_PATH@/src/corelib/io/qfileinfo.cpp
+qfileinfo.o: $(SOURCE_PATH)/src/corelib/io/qfileinfo.cpp
+	$(CXX) -c -o $@ $(CXXFLAGS) $(SOURCE_PATH)/src/corelib/io/qfileinfo.cpp
 
-qdatetime.o: @SOURCE_PATH@/src/corelib/tools/qdatetime.cpp
-	$(CXX) -c -o $@ $(CXXFLAGS) @SOURCE_PATH@/src/corelib/tools/qdatetime.cpp
+qdatetime.o: $(SOURCE_PATH)/src/corelib/tools/qdatetime.cpp
+	$(CXX) -c -o $@ $(CXXFLAGS) $(SOURCE_PATH)/src/corelib/tools/qdatetime.cpp
 
-qstringlist.o: @SOURCE_PATH@/src/corelib/tools/qstringlist.cpp
-	$(CXX) -c -o $@ $(CXXFLAGS) @SOURCE_PATH@/src/corelib/tools/qstringlist.cpp
+qstringlist.o: $(SOURCE_PATH)/src/corelib/tools/qstringlist.cpp
+	$(CXX) -c -o $@ $(CXXFLAGS) $(SOURCE_PATH)/src/corelib/tools/qstringlist.cpp
 
-qmap.o: @SOURCE_PATH@/src/corelib/tools/qmap.cpp
-	$(CXX) -c -o $@ $(CXXFLAGS) @SOURCE_PATH@/src/corelib/tools/qmap.cpp
+qmap.o: $(SOURCE_PATH)/src/corelib/tools/qmap.cpp
+	$(CXX) -c -o $@ $(CXXFLAGS) $(SOURCE_PATH)/src/corelib/tools/qmap.cpp
 
-qhash.o: @SOURCE_PATH@/src/corelib/tools/qhash.cpp
-	$(CXX) -c -o $@ $(CXXFLAGS) @SOURCE_PATH@/src/corelib/tools/qhash.cpp
+qhash.o: $(SOURCE_PATH)/src/corelib/tools/qhash.cpp
+	$(CXX) -c -o $@ $(CXXFLAGS) $(SOURCE_PATH)/src/corelib/tools/qhash.cpp
 
-qlinkedlist.o: @SOURCE_PATH@/src/corelib/tools/qlinkedlist.cpp
-	$(CXX) -c -o $@ $(CXXFLAGS) @SOURCE_PATH@/src/corelib/tools/qlinkedlist.cpp
+qlinkedlist.o: $(SOURCE_PATH)/src/corelib/tools/qlinkedlist.cpp
+	$(CXX) -c -o $@ $(CXXFLAGS) $(SOURCE_PATH)/src/corelib/tools/qlinkedlist.cpp
 
 winmakefile.o: generators/win32/winmakefile.cpp
 	$(CXX) -c -o $@ $(CXXFLAGS) generators/win32/winmakefile.cpp
@@ -185,7 +191,7 @@ meta.o: meta.cpp project.h option.h
 main.o: main.cpp project.h
 	$(CXX) -c -o $@ $(CXXFLAGS) main.cpp
 
-option.o: option.cpp option.h @BUILD_PATH@/src/corelib/global/qconfig.cpp
+option.o: option.cpp option.h $(BUILD_PATH)/src/corelib/global/qconfig.cpp
 	$(CXX) -c -o $@ $(CXXFLAGS) option.cpp
 
 qtmd5.o: qtmd5.cpp
