Fixes:    excessive warnings from icc Details:  just use the default warning level
[git-p4: depot-paths = "//depot/qt/main/": change = 219543]

--- a/mkspecs/linux-icc/qmake.conf
+++ b/mkspecs/linux-icc/qmake.conf
@@ -39,7 +39,7 @@ QMAKE_YACC		= yacc
 QMAKE_YACCFLAGS		= -d
 QMAKE_CFLAGS		= -wd858,1572
 QMAKE_CFLAGS_DEPS	= -M
-QMAKE_CFLAGS_WARN_ON	= -w2 -wd171,193,279,304,310,383,424,444,488,810,967,981,1418,1419,1476,1477
+QMAKE_CFLAGS_WARN_ON	=
 QMAKE_CFLAGS_WARN_OFF	= -w
 QMAKE_CFLAGS_RELEASE	=
 QMAKE_CFLAGS_DEBUG	= -g
