--- a/mkspecs/linux-icc/qmake.conf
+++ b/mkspecs/linux-icc/qmake.conf
@@ -1,29 +1,12 @@
 #
 # qmake configuration for linux-icc
 #
-# Written for Intel C++ 5.0.1, 6.0.1, 7.0 and 8.0 for GNU/Linux
+# Written for Intel C++ Compiler versions 8.x and 9.x for GNU/Linux
 #
 # Note: Some of the remarks from the Intel compiler are disabled (even
 # with 'warn_on' specified):
 #
-# remark #171: invalid type conversion: "int" to "void *"
-# remark #193: zero used for undefined preprocessing identifier
-# remark #279: controlling expression is constant
-# remark #304: access control not specified ("public" by default)
-# remark #310: old-style parameter list (anachronism)
-# remark #383: value copied to temporary, reference to temporary used
-# remark #424: extra ";" ignored
-# remark #444: destructor for base class "Class" is not virtual
-# remark #488: template parameter "T" is not used in declaring the parameter
-#              types of function template "function"
-# remark #810: conversion from "type1" to "type2" may loose significant bits
 # remark #858: type qualifier on return type is meaningless
-# remark #967: conversion from "type1" to "type2"; sizes do not match
-# remark #981: operands are evaluated in unspecified order
-# remark #1418: external definition with no prior declaration
-# remark #1419: external declaration in primary source file
-# warning #1476: field uses tail padding of a base class
-# warning #1477: GNU C++ compilers may use bit field padding
 # warning #1572: floating-point equality and inequality comparisons are unreliable
 #
 
