--- a/mkspecs/macx-xlc/qmake.conf
+++ b/mkspecs/macx-xlc/qmake.conf
@@ -22,6 +22,7 @@ QMAKE_CFLAGS_RELEASE	= -O3
 QMAKE_CFLAGS_DEBUG	= -g
 QMAKE_EXTENSION_SHLIB   = dylib
 QMAKE_CFLAGS_SHLIB	=
+QMAKE_CFLAGS_STATIC_LIB	= $$QMAKE_CFLAGS_SHLIB
 QMAKE_CFLAGS_YACC	=
 QMAKE_CFLAGS_THREAD	= -qthreaded
 QMAKE_EXTENSION_SHLIB   = dylib
@@ -35,6 +36,7 @@ QMAKE_CXXFLAGS_WARN_OFF	= $$QMAKE_CFLAGS_WARN_OFF
 QMAKE_CXXFLAGS_RELEASE	= $$QMAKE_CFLAGS_RELEASE
 QMAKE_CXXFLAGS_DEBUG	= $$QMAKE_CFLAGS_DEBUG
 QMAKE_CXXFLAGS_SHLIB	= $$QMAKE_CFLAGS_SHLIB
+QMAKE_CXXFLAGS_STATIC_LIB = $$QMAKE_CFLAGS_STATIC_LIB
 QMAKE_CXXFLAGS_YACC	= $$QMAKE_CFLAGS_YACC
 QMAKE_CXXFLAGS_THREAD	= $$QMAKE_CFLAGS_THREAD
 
