--- a/mkspecs/linux-lsb/qmake.conf
+++ b/mkspecs/linux-lsb/qmake.conf
@@ -16,7 +16,7 @@ QMAKE_YACCFLAGS		= -d
 QMAKE_YACCFLAGS_MANGLE  = -p $base -b $base
 QMAKE_YACC_HEADER       = $base.tab.h
 QMAKE_YACC_SOURCE       = $base.tab.c
-QMAKE_CFLAGS		= -pipe
+QMAKE_CFLAGS		= -pipe -DQT_LSB
 QMAKE_CFLAGS_DEPS	= -M
 QMAKE_CFLAGS_WARN_ON	= -Wall -W
 QMAKE_CFLAGS_WARN_OFF	= -w
